--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Lightweight application to deliver hubspot form submission via API",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./index.js"
+    "dev": "nodemon ./index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
